helm/effyic/chatai/chatai_ingress.yaml
## 以下 ingress 配置将通过 Controller 调 Higress Console API 完成，这里只做临时验证
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __WORKER_NAME__-chatai
  labels:
    app.kubernetes.io/name: __WORKER_NAME__
    app.kubernetes.io/component: chatai
spec:
  ingressClassName: higress
  rules:
    - host: worker-__WORKER_NAME__-8090-local.hiclaw.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __WORKER_NAME__-chatai
                port:
                  number: 8090
